--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,48 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:30</td>   <td>12326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">LoginTest</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:40</td>   <td>22906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:41</td>   <td>23757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>34637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLoginPageTitleTest</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>34695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:16:53</td>   <td>35698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>46462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLogoTest</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>46550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ac9684">  <td>17/12/24 12:17:05</td>   <td>47288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">verifyNameTest</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnContactsLinkTest</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnDealsPageLink</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:17:19</td>   <td>61834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:17:46</td>   <td>88447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:17:56</td>   <td>98493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:17:57</td>   <td>99327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:18:21</td>   <td>123536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>131012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>131831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:18:50</td>   <td>152561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
-  <td>main@1704475655</td>   <td></td> </tr>
-<tr bgcolor="767dd7">  <td>17/12/24 12:18:59</td>   <td>161128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:58:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:10</td>   <td>11927</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">LoginTest</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:12</td>   <td>13990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:13</td>   <td>14863</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:23</td>   <td>25675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">verifyLoginPageTitleTest</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:23</td>   <td>25717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:24</td>   <td>26431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:35</td>   <td>37251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">verifyLogoTest</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="a794b7">  <td>17/12/24 14:59:35</td>   <td>37401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@71506a1e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="75f592">  <td>17/12/24 14:59:36</td>   <td>38113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@566711b0]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="75f592">  <td>17/12/24 14:59:50</td>   <td>51974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@566711b0]">verifyNameTest</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="75f592">  <td>17/12/24 14:59:50</td>   <td>51984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@566711b0]">clickOnContactsLinkTest</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="75f592">  <td>17/12/24 14:59:50</td>   <td>51993</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@566711b0]">clickOnDealsPageLink</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 14:59:52</td>   <td>54155</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:00:18</td>   <td>80092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">validateCreateNewContact</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:00:30</td>   <td>92169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:00:31</td>   <td>93599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:00:56</td>   <td>118437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">validateCreateNewContact</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:01:08</td>   <td>130029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:01:09</td>   <td>131410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:01:33</td>   <td>155602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">validateCreateNewContact</td> 
+  <td>main@619011445</td>   <td></td> </tr>
+<tr bgcolor="94c270">  <td>17/12/24 15:01:40</td>   <td>162625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@8ba6621]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@619011445</td>   <td></td> </tr>
 </table>
